k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: musang-fums-app-service
  namespace: fums-dev-ns
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  selector:
    app: musang-fums-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musang-fums-app
  namespace: fums-dev-ns
  labels:
    app: musang-fums-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: musang-fums-app
  template:
    metadata:
      labels:
        app: musang-fums-app
    spec:
      containers:
      - name: musang-fums-app
        image: bpitmACRdev.azurecr.io/musang-fums-app:latest
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musang-fums-app-ingress
  namespace: fums-dev-ns
  annotations:
    spec.ingressClassName: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - fums.banpuindo.co.id
    secretName: musang-fums-app-tls
  rules:
  - host: fums.banpuindo.co.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: musang-fums-app-service
            port:
              number: 80
